# AI-Powered-Project-Management-System

./: .gitignore  README.md  docker-compose.yml  test_results.json
backend/: .gitignore  Dockerfile  alembic.ini  check_roles.py  dependencies.py  fix_tokens.py  import_tasks.py  init_db.py  main.py  pyproject.toml  refresh_demo_content.py  requirements.txt  seed_data.py  tasks_data.tsv  test_db.py  test_delete.py  test_soft_delete.py
backend/alembic/: env.py
backend/alembic/versions/: 2f7c9c4de1ab_add_access_scope_to_project_members.py  42d4fb91fe3a_add_status_to_logworks.py  4d6782b4f019_add_manager_id_to_projects.py  5c27d0324fd2_add_start_date_to_tasks.py  8c4a5f9f3c2d_reset_schema_to_permission_rework.py  946e2d6799af_add_is_active_to_project_members.py  9f0f5d4f65b7_normalize_task_statuses_to_three_states.py  b47dbc775d94_initial_schema.py  c53a6b09f71b_repair_project_member_active_defaults.py  fdfa4c31c0eb_add_notifications_table.py
backend/app/: demo_content.py  main.py
backend/database/: connection.py
backend/models/: ai_model.py  department_model.py  logworks.py  project_model.py  refresh_token_model.py  sprint_model.py  task_model.py  user_model.py
backend/repositories/: department_repository.py  refresh_token_repository.py  user_repository.py
backend/routers/: auth.py  projects.py  users.py
backend/schemas/: user_schema.py
backend/scripts/: seed_users.py
backend/services/: department_service.py  project_service.py  user_service.py
backend/tests/: test_ai_rules.py  test_main.py
backend/utils/: jwt_handler.py  project_helpers.py
(+203 files in other folders)
