[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn[standard]==0.37.0",
    "sqlalchemy==2.0.44",
    "pymysql[rsa]==1.1.2",
    "python-dotenv==1.1.1",
    "passlib[bcrypt]==1.7.4",
    "pyjwt==2.10.1",
    "pydantic[email]==2.12.0",
    "python-multipart==0.0.20",
    "alembic==1.13.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E711", "E712", "E402", "F841", "E501"]
